adds pro tab init
